tests/sksl/errors/SwizzleConstantOutput.sksl
void main() {
    float4 test = float4(1);
    test.xyz0 = float4(1);
}
